--- a/agen/agen.html
+++ b/agen/agen.html
@@ -11,18 +11,26 @@
       <nav>
         <div class="logo">RIOT GAMES</div>
         <ul>
-          <li class="dropdown" onclick="toggleMenu()">
+          <li class="dropdown" onclick="toggleMenu(event)">
             INFO GAME &#9662;
             <div class="dropdown-content" id="infoMenu">
-              <button class="menu-btn" onclick="showSection('agents', event)">
-                AGEN
-              </button>
-              <button class="menu-btn" onclick="showSection('maps', event)">
-                MAPS
-              </button>
-              <button class="menu-btn" onclick="showSection('skins', event)">
-                SKIN SENJATA
-              </button>
+              <a href="/agen/agen.html">
+                <button class="menu-btn" onclick="showSection('agents', event)">
+                  AGEN
+                </button>
+              </a>
+
+              <a href="/maps/maps.html">
+                <button class="menu-btn" onclick="showSection('maps', event)">
+                  MAPS
+                </button>
+              </a>
+
+              <a href="/weapons/weapons.html">
+                <button class="menu-btn" onclick="showSection('skins', event)">
+                  SKIN SENJATA
+                </button>
+              </a>
             </div>
           </li>
           <li>MEDIA</li>
