--- a/home/home.html
+++ b/home/home.html
@@ -25,9 +25,12 @@
                   MAPS
                 </button>
               </a>
-              <button class="menu-btn" onclick="showSection('skins', event)">
-                SKIN SENJATA
-              </button>
+
+              <a href="/weapons/weapons.html">
+                <button class="menu-btn" onclick="showSection('skins', event)">
+                  SKIN SENJATA
+                </button>
+              </a>
             </div>
           </li>
           <li>MEDIA</li>
